# cube-solver-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cabal.project  compose.yaml  cube-solver-server.cabal  cube-solver.cabal
app/: Main.hs
src/: AlgExpr.hs  Cube.hs  CubeParser.hs  CubeSolverServer.hs  CubeState.hs  CubeValidator.hs  PDFCube.hs  Triggers.hs
src/CFOP/: CFOP.hs  Cross.hs  F2L.hs  OLL.hs  PLL.hs
test/: CubeSolverTest.hs
